[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-codex-cli"
version = "0.1.0"
description = "Recursive long-context CLI that delegates reasoning to Codex CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "k" }]
dependencies = []

[project.scripts]
rlm-codex = "rlm_codex_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
